# HAETAE

./: .gitignore  .tool-versions  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  ONBOARDING.md  README.en.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
apps/desktop/: README.md  package.json
apps/notebooklm/: .gitignore  package.json  pyproject.toml
apps/notebooklm/app/: config.py  db.py  graph.py  guard.py  main.py  mirror.py  notebooklm_client.py
apps/notebooklm/app/routes/: notebooklm.py
apps/notebooklm/tests/: test_auth_status.py  test_db.py  test_graph.py  test_guard.py  test_health.py
apps/server/: .env.example  README.md  drizzle.config.ts  package.json  tsconfig.json
apps/web/: .env.example  .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
docs/: README.md  architecture.md  design-system.md  portability.md  requirements.md  roadmap.md  second-brain.md  stack.md  status.md  workflow.md
docs/decisions/: 0001-vite-over-nextjs.md  0002-monorepo-split.md  0003-fastify-server.md  0004-tanstack-router.md  0005-sqlite-drizzle.md  0006-direct-ui.md  0007-rules-categories.md  0008-ansi-bloomberg.md  0009-notebooklm-integration.md  0010-notebooklm-python-app.md  0011-second-brain-llm-wiki.md  0012-tauri-desktop.md  README.md  pending.md
docs/phases/: phase-3-terminal.md  phase-5-api.md  (+3 more)
scripts/: bootstrap.sh  fix-node-pty-perms.mjs  launch.sh
(+378 files in other folders)
