[project]
name = "haetae-notebooklm"
version = "0.1.0"
description = "HAETAE NotebookLM service — FastAPI wrapper over notebooklm-py (ADR 0010)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic-settings>=2.6",
    "notebooklm-py[browser]>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
